Allow display:inline-block to be used on :before and :after.  b=368622  r+sr=bzbarsky